# DriveAccompany

./: .gitignore  README.md  pyproject.toml
backend/: CMakeLists.txt
backend/labeling/: get_frame.py  mydata.yaml  train_v5.sh  train_val.py  voc_labels.py
backend/src/: base64.cpp  base64.h  main.cpp  utils.cpp  utils.h  yolo_detect.cpp  yolo_detect.h
client/: audio_decode.py  index.html  main.py  speech.py  tts_examples.py
frontend/: README.md  package.json
frontend/helpServer/: AlertServer.js  README.md  Server.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/common/BGM/: BackgroundMusic.vue
frontend/src/components/layout/: FooterComp.vue
frontend/src/components/views/About/: Index.vue
frontend/src/components/views/VideoPage/: AlertBar.vue  ButtonBar.vue  VideoContent.vue  audioPlayer.js
