[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "gevent>=25.4.2",
    "opencv-python>=4.11.0.86",
    "pyaudio>=0.2.14",
    "requests>=2.32.3",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
]
